--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
     <div class="nav">
         <div>
-            <p>Get the App</p>
+            <p>Get the Appli</p>
         </div>
         <ul class="nav-bar">
 <li>Add Restaurant</li>           
